added sticky component to navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ashay-Web Developer</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -32,5 +33,9 @@
             </div>
         </div>
     </section>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab in minima omnis harum maxime voluptatum consequatur reprehenderit, quos eum pariatur non aperiam perferendis nostrum, fugit repellendus autem optio recusandae voluptates commodi aliquam laboriosam doloribus soluta. Omnis dicta aliquid molestiae doloribus labore delectus ea cupiditate cumque. Minus, nesciunt dolore? Reprehenderit culpa recusandae aliquam omnis. Itaque perferendis non quo aliquam obcaecati odio rem eius corrupti reprehenderit repudiandae! Labore odio, molestiae praesentium quae atque distinctio voluptatem ipsa sunt optio blanditiis eveniet, explicabo officiis illum magni quod minima quas officia aliquam nesciunt quaerat commodi quo rerum exercitationem odit! Odit quae ipsam commodi illum et possimus, eveniet magni recusandae velit repudiandae laborum beatae, iusto fugit debitis ut facilis. Dignissimos quo illo consequuntur delectus aliquid vero fugit officia ullam quasi maiores iste, harum neque? Sequi voluptate, perspiciatis laboriosam voluptas eius nobis? Reiciendis est vel consequuntur magni repellendus tenetur! Sapiente ab soluta modi voluptatibus cumque fuga obcaecati dolorum neque expedita provident repellat similique at ex excepturi maiores corporis doloribus id, eius enim non odio dolor! Magnam, dicta. Magni deserunt alias aliquam exercitationem, ratione totam obcaecati nemo a provident, minima autem nam est! Reiciendis inventore, quam obcaecati quidem voluptatum dolore asperiores hic dolor aperiam voluptate, natus mollitia fugit.</p>
+    
+    <script src="script.js"></script>
 </body>
 </html>
