--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <li><a href="#">Teams</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
 
@@ -30,6 +34,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2"> Ashay</div>
                 <div class="text-3">And I'm a <span>Web Developer.</span></div>
+                <a href="#">Hire me</a>
             </div>
         </div>
     </section>
