added About Me section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo">
+                <a href="#">
+                    <!-- Portfo<span>lio.</span> -->
+                    <i class="fas fa-laptop-code"></i>
+                </a>
+            </div>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -39,8 +44,23 @@
         </div>
     </section>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab in minima omnis harum maxime voluptatum consequatur reprehenderit, quos eum pariatur non aperiam perferendis nostrum, fugit repellendus autem optio recusandae voluptates commodi aliquam laboriosam doloribus soluta. Omnis dicta aliquid molestiae doloribus labore delectus ea cupiditate cumque. Minus, nesciunt dolore? Reprehenderit culpa recusandae aliquam omnis. Itaque perferendis non quo aliquam obcaecati odio rem eius corrupti reprehenderit repudiandae! Labore odio, molestiae praesentium quae atque distinctio voluptatem ipsa sunt optio blanditiis eveniet, explicabo officiis illum magni quod minima quas officia aliquam nesciunt quaerat commodi quo rerum exercitationem odit! Odit quae ipsam commodi illum et possimus, eveniet magni recusandae velit repudiandae laborum beatae, iusto fugit debitis ut facilis. Dignissimos quo illo consequuntur delectus aliquid vero fugit officia ullam quasi maiores iste, harum neque? Sequi voluptate, perspiciatis laboriosam voluptas eius nobis? Reiciendis est vel consequuntur magni repellendus tenetur! Sapiente ab soluta modi voluptatibus cumque fuga obcaecati dolorum neque expedita provident repellat similique at ex excepturi maiores corporis doloribus id, eius enim non odio dolor! Magnam, dicta. Magni deserunt alias aliquam exercitationem, ratione totam obcaecati nemo a provident, minima autem nam est! Reiciendis inventore, quam obcaecati quidem voluptatum dolore asperiores hic dolor aperiam voluptate, natus mollitia fugit.</p>
-    
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/profile-1.jpeg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Ashay and I'm a <span>Web Developer</span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi veritatis, accusantium alias, omnis, quibusdam eum quis doloribus voluptates hic voluptatibus consequuntur nihil. Corrupti ipsam vero sunt magnam, aliquam culpa. Quos, culpa nostrum porro corporis natus quam debitis aut magnam rerum reprehenderit? Laudantium aut cum harum rem voluptate facilis voluptatem ipsa, fuga amet dolorem saepe consectetur. Laboriosam quam reiciendis saepe veniam.</p>
+                    <a href="#">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
