--- a/index.html
+++ b/index.html
@@ -61,6 +61,50 @@
         </div>
     </section>
 
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experiences.</div>            
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nesciunt facere, adipisci delectus eligendi repellat hic odit ipsam a eum numquam nihil quidem quos voluptate dicta? Architecto delectus quo temporibus itaque error perspiciatis nisi eius, et sint laudantium unde, quibusdam, adipisci quia fuga! Nam reiciendis, veniam neque vitae voluptatum nulla expedita autem labore obcaecati et corporis inventore asperiores recusandae esse?</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Javascript</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
