--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
                 </a>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
 
             <div class="menu-btn">
@@ -203,7 +202,7 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Send me a message</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
@@ -227,6 +226,11 @@
             </div>
         </div>
     </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created By <a href="#">Ashay</a> | <span class="far fa-copyright"> 2020 All rights reserved.</span></span>
+    </footer>
 
 
     <script src="js/mixitup.min.js"></script>
