--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">
@@ -18,11 +23,11 @@
                 </a>
             </div>
             <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#portfolio">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#portfolio" class="menu-btn">Projects</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
 
             <div class="menu-btn">
@@ -37,7 +42,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2"> Ashay</div>
-                <div class="text-3">And I'm a <span>Web Developer.</span></div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
@@ -52,7 +57,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Ashay and I'm a <span>Web Developer</span></div>
+                    <div class="text">I'm Ashay and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi veritatis, accusantium alias, omnis, quibusdam eum quis doloribus voluptates hic voluptatibus consequuntur nihil. Corrupti ipsam vero sunt magnam, aliquam culpa. Quos, culpa nostrum porro corporis natus quam debitis aut magnam rerum reprehenderit? Laudantium aut cum harum rem voluptate facilis voluptatem ipsa, fuga amet dolorem saepe consectetur. Laboriosam quam reiciendis saepe veniam.</p>
                     <a href="#">Download CV</a>
                 </div>
